[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ShimmeringBarrier.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/mini_spark/spark_06.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/mini_spark/spark_05.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "barrier",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "barrier",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.5, 256 )

[node name="ShimmeringBarrier" type="Area2D" groups=["barriers"]]
modulate = Color( 0.239216, 0.823529, 0.0588235, 1 )
scale = Vector2( 0.4, 2 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "barrier"
frame = 1

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 22.5, -3.5 )
rotation = 3.14159
frames = SubResource( 3 )
animation = "barrier"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 3.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 6.25011, 26.75 )
scale = Vector2( 86.875, 40.125 )

[node name="RestoreBarrierTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_ShimmeringBarrier_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="RestoreBarrierTimer" to="." method="_on_RestoreBarrierTimer_timeout"]
